--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+   font-family: Gilroy;
+   src: url(./Gilroy-FREE/Gilroy-ExtraBold.otf);
+}
+
 *{
-   font-family:Arial, Helvetica, sans-serif;
+ font-family: Gilroy;
 }
 ::selection{
    color: rgb(243, 194, 35);
